Refactor interface formatting and improve code consistency