@@ -16,19 +16,23 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiConsumer;
 
-public class ModEntityLootTables implements LootTableSubProvider {
+public class ModEntityLootTables implements LootTableSubProvider
+{
 
-    public static List<ResourceLocation> entityInjectedLootTables = Arrays.asList(
+    public static List<ResourceLocation> entityInjectedLootTables = List.of(
             ResourceLocation.parse("entities/drowned")
     );
 
-    public ModEntityLootTables(HolderLookup.Provider provider) {
+    public ModEntityLootTables(HolderLookup.Provider provider)
+    {
     }
 
     @Override
-    public void generate(BiConsumer<ResourceKey<LootTable>, LootTable.Builder> biConsumer) {
+    public void generate(BiConsumer<ResourceKey<LootTable>, LootTable.Builder> biConsumer)
+    {
 
-        for (ResourceLocation lootTable : entityInjectedLootTables) {
+        for (ResourceLocation lootTable : entityInjectedLootTables)
+        {
             biConsumer.accept(
                     ResourceKey.create(Registries.LOOT_TABLE, ResourceLocation.fromNamespaceAndPath(LegendarySurvivalOverhaul.MOD_ID, "inject/" + lootTable.getPath())),
                     LootTable.lootTable().withPool(
